src/read/snapshots/seeyou_cub__read__point__tests__attributes_reset_point1.snap
---
source: src/read/point.rs
expression: point1
---
ParsedPoint {
    lon: 0.01,
    lat: 0.01,
    name: Some(
        "First",
    ),
    frequency: None,
    frequency_name: None,
    optional_data: [],
}
