src/read/snapshots/seeyou_cub__read__point__tests__attributes_reset_point2.snap
---
source: src/read/point.rs
expression: point2
---
ParsedPoint {
    lon: 0.02,
    lat: 0.02,
    name: Some(
        "Second",
    ),
    frequency: None,
    frequency_name: None,
    optional_data: [],
}
