src/read/snapshots/seeyou_cub__read__point__tests__attributes_reset_point3.snap
---
source: src/read/point.rs
expression: point3
---
ParsedPoint {
    lon: 0.03,
    lat: 0.03,
    name: None,
    frequency: None,
    frequency_name: None,
    optional_data: [],
}
