src/read/snapshots/seeyou_cub__read__point__tests__origin_update_point2.snap
---
source: src/read/point.rs
expression: point2
---
ParsedPoint {
    lon: 0.151,
    lat: 0.232,
    name: None,
    frequency: None,
    frequency_name: None,
    optional_data: [],
}
