src/read/snapshots/seeyou_cub__read__point__tests__parse_point_with_all_attributes.snap
---
source: src/read/point.rs
expression: point
---
ParsedPoint {
    lon: 0.01,
    lat: 0.02,
    name: Some(
        "Test Airspace",
    ),
    frequency: Some(
        123456789,
    ),
    frequency_name: Some(
        "Tower",
    ),
    optional_data: [
        IcaoCode(
            "LFPG",
        ),
        SecondaryFrequency(
            1193046,
        ),
        ExceptionRules(
            "Rules",
        ),
        NotamRemarks(
            "Remarks",
        ),
        NotamId(
            "A12345",
        ),
        NotamInsertTime(
            305419896,
        ),
    ],
}
