src/read/snapshots/seeyou_cub__read__point__tests__parse_points_ending_at_eof.snap
---
source: src/read/point.rs
expression: points
---
[
    ParsedPoint {
        lon: 0.71,
        lat: 6.5534,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.71,
        lat: 1.6383001,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.0,
        lat: 0.7527001,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 1.9014,
        lat: 0.7527001,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 2.7733998,
        lat: 0.49150014,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 4.1505,
        lat: 0.49150014,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 5.625,
        lat: 0.0,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 10.4854,
        lat: 0.0,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 9.8911,
        lat: 1.2442,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 9.5934,
        lat: 1.8595,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 8.8471,
        lat: 3.3859,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 8.485701,
        lat: 4.3143,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 8.361,
        lat: 4.6438,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 8.0379,
        lat: 5.4611998,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 7.7894,
        lat: 6.1511,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 7.6456003,
        lat: 6.5534,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
    ParsedPoint {
        lon: 0.71000004,
        lat: 6.5534,
        name: None,
        frequency: None,
        frequency_name: None,
        optional_data: [],
    },
]
