src/read/snapshots/seeyou_cub__read__point__tests__parse_simple_point.snap
---
source: src/read/point.rs
expression: point
---
ParsedPoint {
    lon: 0.01,
    lat: 0.02,
    name: None,
    frequency: None,
    frequency_name: None,
    optional_data: [],
}
