src/read/snapshots/seeyou_cub__read__point__tests__point1.snap
---
source: src/read/point.rs
expression: point1
---
ParsedPoint {
    lon: 0.105,
    lat: 0.21,
    name: None,
    frequency: None,
    frequency_name: None,
    optional_data: [],
}
